--- a/html/home.html
+++ b/html/home.html
@@ -40,7 +40,7 @@
 <!--------- Szolgáltatás cardok -------------------->
   <div class="row gx-4 gx-lg-5 mb-5">
     <div class="col-md-4" 
-         ng-repeat="card in home_cards">
+         ng-repeat="card in cards">
       <div class="card h-100 text-center border shadow-lg order">
         <div class="card-body">
           <i class="{{card.icon}} fa-3x mb-3"></i>
@@ -54,6 +54,7 @@
       </div>
     </div>
   </div>
+
 
   <!----------------- Hűség card ---------------------->
   <div>
