--- a/html/services.html
+++ b/html/services.html
@@ -86,7 +86,7 @@
                      alt="{{service.services_name}}">
               </div>
               <div class="card-body rounded">
-                <h5 class="card-title">
+                <h5 class="card-title text-warning">
                   {{lang.data[service.services_name]}}
                 </h5>
                 <p class="card-text">
