--- a/html/register.html
+++ b/html/register.html
@@ -31,7 +31,8 @@
                 </label>
                 <input 
                   id="register-last_name"
-                  class="form-control bg-dark text-white border-secondary rounded"
+                  class="form-control bg-dark text-white
+                         border-secondary rounded"
                   name="last_name" 
                   type="text"
                   placeholder="{{lang.data.last_name}}"
@@ -161,7 +162,8 @@
                 </label>
                 <input 
                   id="register-email"
-                  class="form-control bg-dark text-white border-secondary rounded"
+                  class="form-control bg-dark text-white 
+                         border-secondary rounded"
                   name="email" 
                   type="email"
                   placeholder="E-mail"
@@ -177,7 +179,8 @@
                 </label>
                 <input 
                   id="register-emailConfirm"
-                  class="form-control bg-dark text-white border-secondary rounded"
+                  class="form-control bg-dark text-white 
+                         border-secondary rounded"
                   name="emailConfirm" 
                   type="email"
                   placeholder="E-mail {{lang.data.confirmation}}"
