--- a/html/login.html
+++ b/html/login.html
@@ -7,7 +7,8 @@
 
 <!----------------Bejelentkezés form---------------->
       <div 
-        class="col-12 p-5 d-flex flex-column justify-content-center"
+        class="col-12 p-5 d-flex flex-column 
+               justify-content-center"
         ng-style="{'background-image': 'url(' + login_bg + ')', 
                    'background-size': 'cover', 
                    'background-position': 'center', 
@@ -20,7 +21,8 @@
         </h3>
 
 <!---------------Üzenet, ha nincs fiókja----------->
-        <p class="text-center text-warning text-decoration-underline mb-3">
+        <p class="text-center text-warning 
+                  text-decoration-underline mb-3">
           {{lang.data.login_do_account}}
         </p>
         <form name="loginForm" 
@@ -36,7 +38,8 @@
             </label>
             <input
               id="login-email"
-              class="form-control bg-dark text-white border-secondary "
+              class="form-control bg-dark text-white 
+                     border-secondary "
               name="email"
               type="text"
               placeholder="E-mail"
@@ -45,20 +48,23 @@
               required
               maxlength="50"
               ng-model="model.email"
-              ng-pattern="/^([a-z0-9_.+-])+\@(([a-z0-9-])+\.)+([a-z0-9]{2,4})+$/"
+              ng-pattern="/^([a-z0-9_.+-])+\@(([a-z0-9-])+\.)+
+                            ([a-z0-9]{2,4})+$/"
               ng-disable-space>
           </div>
 
 <!-------------Jelszó-------------------------->
           <div class="mb-3">
-            <label for="login-password" class="form-label text-white">
+            <label for="login-password" 
+                   class="form-label text-white">
               <i class="fa-solid fa-star fa-2xs text-danger"></i>
               <i class="fa-solid fa-key me-1"></i> 
               {{lang.data.password}}
             </label>
             <input
               id="login-password"
-              class="form-control bg-dark text-white border-secondary"
+              class="form-control bg-dark 
+                     text-white border-secondary"
               name="password"
               type="{{model.showPassword ? 'text' : 'password'}}"
               placeholder="Jelszó"
@@ -69,7 +75,8 @@
               maxlength="20"
               ng-init="model.password=null"
               ng-model="model.password"
-              ng-pattern="/^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,20}$/"
+              ng-pattern="/^(?=.*\d)(?=.*[a-z])
+                          (?=.*[A-Z]).{6,20}$/"
               ng-disable-space>
           </div>
 
