--- a/html/login.html
+++ b/html/login.html
@@ -48,8 +48,7 @@
               required
               maxlength="50"
               ng-model="model.email"
-              ng-pattern="/^([a-z0-9_.+-])+\@(([a-z0-9-])+\.)+
-                            ([a-z0-9]{2,4})+$/"
+              ng-pattern="/^([a-z0-9_.+-])+\@(([a-z0-9-])+\.)+([a-z0-9]{2,4})+$/"
               ng-disable-space>
           </div>
 
@@ -75,8 +74,7 @@
               maxlength="20"
               ng-init="model.password=null"
               ng-model="model.password"
-              ng-pattern="/^(?=.*\d)(?=.*[a-z])
-                          (?=.*[A-Z]).{6,20}$/"
+              ng-pattern="/^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,20}$/"
               ng-disable-space>
           </div>
 
