--- a/html/services.html
+++ b/html/services.html
@@ -95,8 +95,10 @@
                 <p class="fw-bold text-warning text-center">
                   {{service.price | currency:'' :0}} Ft
                 </p>
-                <button class="btn btn-warning w-100">
-                  {{lang.data.appointment_button}}
+                <button class="btn w-100"
+                        ng-click="addPackage(service)"
+                        ng-class="{'btn-primary': service.isSelected, 'btn-warning': !service.isSelected}">
+                  {{ service.isSelected ? lang.data.appointment_button_selected : lang.data.appointment_button }}
                 </button>
               </div>
             </div>
