Régi képek törlése booking_hmtl létrejozása és az időpontfoglalo készítése...

--- a/html/header.html
+++ b/html/header.html
@@ -78,9 +78,9 @@
         <li class="nav-item mx-1 bg-warning rounded-3" 
             ng-if="$root.user && $root.user.id">
           <a class="nav-link" 
-             ui-sref="profile({ section: 'myBookings' })">
+             ui-sref="booking">
             <i class="fa-regular fa-calendar"></i>
-            {{lang.data.my_appointments}}
+            {{lang.data.make_an_appointment}}
           </a>
         </li>
 
