--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -154,7 +154,7 @@
 
             <!-----------------Elégedett kép--------------->
             <div
-              class="col-lg-6 d-flex flex-column 
+              class="col-lg-6 mt-3 d-flex flex-column 
                      justify-content-between text-center">
 
               <!-- Kép -->
