--- a/html/home.html
+++ b/html/home.html
@@ -39,9 +39,10 @@
 
 <!--------- Szolgáltatás cardok -------------------->
   <div class="row gx-4 gx-lg-5 py-5">
-    <div class="col-md-4 mb-4" ng-repeat="card in cards"> <!-- mb-4 biztosítja a függőleges távolságot -->
+    <div class="col-md-4 mb-4" 
+         ng-repeat="card in cards">
       <div class="card h-100 text-center border shadow-lg">
-        <div class="card-body d-flex flex-column"> <!-- d-flex és flex-column biztosítja, hogy a gombok mindig az alján legyenek -->
+        <div class="card-body d-flex flex-column">
           <i class="{{card.icon}} fa-3x mb-3"></i>
           <h2 class="card-title">
             {{card.title}}
@@ -53,9 +54,6 @@
       </div>
     </div>
   </div>
-
-
-
 
   <!----------------- Hűség card ---------------------->
   <div>
