--- a/html/profile.html
+++ b/html/profile.html
@@ -11,12 +11,12 @@
 
     <!--------------------Odalmenü sáv------------------->
       <div
-        class="p-4 bg-dark border-end"
+        class="p-4 bg-dark border-end border-radius"
         ng-init="selectedSection = 'personal'"
-        style="width: 250px; border-radius: 15px 0 0 15px rounded-pill">
+        style="width: 250px; border-radius: 15px 0 0 15px">
         <ul class="list-unstyled">
           <li
-            class="mb-3 pointer py-2 px-3"
+            class="mb-3 pointer py-2 px-3 rounded-pill"
             ng-click="selectedSection = 'personal'"
             ng-class="{'bg-warning text-dark rounded-3':
                           selectedSection === 'personal'}">
