--- a/html/header.html
+++ b/html/header.html
@@ -1,5 +1,5 @@
 <nav
-  class="header-custom navbar navbar-expand-md 
+  class="header-custom navbar navbar-expand-xl
          text-white fs-5 border-primary"
   data-bs-theme="dark">
   <div class="container-fluid">
@@ -18,7 +18,7 @@
     
     <!------------Navbar tartalom------------->
     <div id="navbar_content" 
-         class="collapse navbar-collapse mt-3 mt-md-0">
+         class="collapse navbar-collapse mt-3 mt-xl-0">
       <a class="nav-link" 
          ui-sref="home" 
          ui-sref-active="active" 
