--- a/html/root.html
+++ b/html/root.html
@@ -2,6 +2,6 @@
 						d-flex flex-column vh-100 overflow-auto">
 	<header ui-view="header" class="sticky-top"></header>
 	<main 	ui-view="" class="position-relative flex-fill"></main>
-	<footer ui-view="footer" class="sticky-top"></footer>
+	<footer ui-view="footer"></footer>
 	<div 	ui-view="modal"></div>
 </div>
