--- a/html/profile.html
+++ b/html/profile.html
@@ -384,8 +384,8 @@
       <div ng-if="selectedSection === 'myBookings'" 
            ng-init="loadBookings()">
         <h3 class="text-center mb-4">
-          {{ lang.data.my_bookings }}
-        </h3>
+            {{ lang.data.my_bookings }}
+          </h3>
         <table class="table table-bordered" 
                ng-if="bookings.length > 0">
             <thead class="table-dark">
@@ -394,14 +394,22 @@
                     <th>{{ lang.data.date }}</th>
                     <th>{{ lang.data.time }}</th>
                     <th>{{ lang.data.price }}</th>
+                    <th>{{ lang.data.operation }}</th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="booking in bookings">
-                    <td>{{ booking.package }}</td>
+                    <td>{{ lang.data[booking.package] }}</td>
                     <td>{{ booking.date }}</td>
                     <td>{{ booking.time }}</td>
                     <td>{{ booking.price | currency:'' :0 }} Ft</td>
+                    <td>
+                      <button class="btn btn-danger btn-sm"
+                              ng-click="deleteBooking(booking.id)">
+                          <i  class="fa-solid fa-trash"></i> 
+                          {{ lang.data.delete }}
+                      </button>
+                  </td>
                 </tr>
             </tbody>
         </table>
