--- a/html/register.html
+++ b/html/register.html
@@ -1,5 +1,5 @@
 <div class="container vh-100 d-flex justify-content-center
-            align-items-center my-5">
+            align-items-center">
   <div class="card shadow-lg text-white w-75" 
        style="border-radius: 15px; overflow: hidden;">
     <div class="row g-0">
